; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/utils/extr_uuid.c_uuid_random.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/utils/extr_uuid.c_uuid_random.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.os_time = type { i32 }

@SHA256_MAC_LEN = common dso_local global i32 0, align 4
@UUID_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uuid_random(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.os_time, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %8 = load i32, i32* @SHA256_MAC_LEN, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i32, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = call i32 @os_get_time(%struct.os_time* %4)
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @UUID_LEN, align 4
  %15 = call i64 @os_get_random(i32* %13, i32 %14)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %23, label %17

17:                                               ; preds = %1
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* @UUID_LEN, align 4
  %20 = bitcast %struct.os_time* %4 to i32*
  %21 = call i64 @hmac_sha256(i32* %18, i32 %19, i32* %20, i32 4, i32* %11)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %17, %1
  store i32 -1, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %42

24:                                               ; preds = %17
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* @UUID_LEN, align 4
  %27 = call i32 @os_memcpy(i32* %25, i32* %11, i32 %26)
  %28 = load i32*, i32** %3, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 6
  %30 = load i32, i32* %29, align 4
  %31 = and i32 %30, 15
  %32 = or i32 64, %31
  %33 = load i32*, i32** %3, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 6
  store i32 %32, i32* %34, align 4
  %35 = load i32*, i32** %3, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 8
  %37 = load i32, i32* %36, align 4
  %38 = and i32 %37, 63
  %39 = or i32 128, %38
  %40 = load i32*, i32** %3, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 8
  store i32 %39, i32* %41, align 4
  store i32 0, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %42

42:                                               ; preds = %24, %23
  %43 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %43)
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @os_get_time(%struct.os_time*) #2

declare dso_local i64 @os_get_random(i32*, i32) #2

declare dso_local i64 @hmac_sha256(i32*, i32, i32*, i32, i32*) #2

declare dso_local i32 @os_memcpy(i32*, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
